    Added new efun: configure_driver() and documentation.
    configure_driver() will configure variuous aspects of the driver at run-time.
    The first settings available is now the soft and hard memory limits.
  - (smalloc.c, slaballoc.c, sysmalloc.c, xptmalloc.c)
    Added soft and hard memory limits in output of then 'malloc' command.

19-Apr-2009 (Gnomi)
  - (pkg-tls.c) Set this_interactive() when executing the callback
    after handshaking and print the prompt afterwards, so it looks the
    same as a normal logon() call.
  - (closure.c, interpret.c) New opcodes F_CALL_CLOSURE and F_POP_SECOND
    for calling more complicated closures like lambda, inherited lfun
    and context closures from within a lambda closure. (Bug #613)

16-Apr-2009 (Gnomi)
  - (comm.c, interpret.c, doc/) Made the maximum write buffer size
    configurable per interactive via a new efun configure_interactive.
    New optional driver hook H_MSG_DISCARDED to inform the master about
    discarded messages and send a custom error message to the interactive.
    Already compressed packages wont be discarded (Bug #297).

15-Apr-2009 (Gnomi)
  - (pkg-gnutls.c) Support for older versions of libgnutls.
  - (port.h, object.c)
    Savefiles are written in binary mode, if the host system supports any
      such notion (O_BINARY exists). Additionally, they are read as binary
      as well, if it is supported. (Note: POSIX conforming systems do not
      distinguish between 'text' and 'binary' modes, this is only relevant
      to Cygwin.)

14-Apr-2009 (Gnomi)
  - (doc/driver/predefined) Corrected description of __PATH__(n).
  - (mk-patchlevel.h) Call version.sh in the current directory.
  - (interpret.c) The size of big switch structures was miscalculated
    on LP64 platforms. (t-0000622.c)

12-Apr-2009 (Gnomi)
  - (efuns.c, pkg-openssl.c, pkg-gcrypt.c) Moved hash() and hmac()
    from pkg-openssl.c to efuns.c and implemented them also using